# usuba2

./: .gitignore  dune-project  usuba2.opam
.github/workflows/: build-test.yml
examples/: gift.ua  nested.ua
lib/: ast.ml  cost.ml  dune  eval.ml  gift.ml  ident.ml  lexer.mll  operator.ml  operator.mli  parser.mly  pass.ml  pp.ml  prog.ml  scstr.ml  term.ml  ty.ml  ty.mli  typecheck.ml  util.ml  value.ml
lib/ex/: dune  eval.ml  gift.ml  pass.ml
lib/ua0/: ast.ml  dune  eval.ml  gift.ml  lexer.mll  parser.mly  pass.ml  pp.ml  scstr.ml  typecheck.ml  util.ml  value.ml
lib/uat/: ast.ml  dune  pass.ml  pp.ml  scstr.ml  typecheck.ml  util.ml
lib/uat/passes/: letUnest.ml  reindexWrap.ml
test/: dune  file.ml  gen.ml  test_bitslice.ml  test_costs.ml  test_fixslice.ml  test_pass.ml  test_reindexWrap.ml  test_typecheck.ml  test_typecheck_file.ml  test_util.ml  test_vectors.ml
test/src/: gift.ua  gift_bitslice.ua  test_reindex.ua  test_reindex2.ua  test_reindex_fs.ua
test/test-vectors/gift128/: gift128-cipher1.txt  gift128-cipher2.txt  gift128-cipher3.txt  gift128-key3.txt  gift128-plaintext2.txt  gift128-plaintext3.txt
test/test-vectors/gift64/: gift64-cipher1.txt  gift64-cipher2.txt  gift64-cipher3.txt  gift64-key2.txt  gift64-key3.txt  gift64-plaintext2.txt  gift64-plaintext3.txt
util/: bits.ml  dune  gift.ml  io.ml  listUtil.ml  stringUtil.ml  util.ml
